--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -330,6 +330,7 @@ p.show-more{
 p.show-more:hover ~ .show-more-icon{
   margin-top: 6px;
   opacity: 1;
+  transform: scale(1.3);
   transition: all 0.5s ease;
   filter: blur(2px);
 }
@@ -338,7 +339,7 @@ p.show-more:hover{
   opacity: 1;
   transform: scale(1.1);
   transition: all 0.5s ease;
-  filter: blur(2px);
+  font-weight: 700;
 }
 
 .update-show-more{
@@ -353,10 +354,10 @@ p.show-more:hover{
   transition: all 0.7s ease;
 }
 
-p.show-more:hover ~ .update-show-more{
+/* p.show-more:hover ~ .update-show-more{
   display: block;
   z-index: -1;
-}
+} */
 
 .line2{
   margin-top: 10px;
