Add fire base & 8 limit and more update

--- a/src/index.css
+++ b/src/index.css
@@ -69,11 +69,20 @@ button:focus-visible {
   }
 }
 
-@keyframes shine {
+@keyframes shimmer {
   0% {
-    background-position: 200% 0;
+    transform: translateX(-100%);
   }
   100% {
+    transform: translateX(100%);
+  }
+}
+
+@keyframes shine {
+  from {
+    background-position: 200% 0;
+  }
+  to {
     background-position: -200% 0;
   }
 }
